hphp/test/zend/bad/Zend/tests/declare_003.php
<?php

declare(encoding = 1);
declare(encoding = 11111111111111);
declare(encoding = NULL);
declare(encoding = M_PI);

print 'DONE';

?>